[shenker/cloning,cloning] Registry can duplicate a collection.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/201129 3G.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/201129 3G.ipynb
@@ -44,7 +44,8 @@
     "import paulssonlab.cloning.workflow as workflow\n",
     "import paulssonlab.cloning.util as cloning_util\n",
     "import paulssonlab.cloning.sequence as sequence\n",
-    "import paulssonlab.cloning.golden_gate as golden_gate"
+    "import paulssonlab.cloning.golden_gate as golden_gate\n",
+    "import paulssonlab.cloning.registry as registry"
    ]
   },
   {
@@ -78,15 +79,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "session = benchlingapi.Session(config[\"benchling\"][\"api_key\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "gc = pygsheets.authorize(service_account_file=\"credentials.json\")"
    ]
   },
@@ -96,8 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "col = workflow.get_strain_collection_sheets(gc.drive.service, \"LIB\")\n",
-    "col"
+    "# session = benchlingapi.Session(config[\"benchling\"][\"api_key\"])"
    ]
   },
   {
@@ -106,11 +97,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "strain_sheet = gc.open_by_key(col[\"strains\"]).worksheet()\n",
-    "plasmid_sheet = gc.open_by_key(col[\"plasmids\"]).worksheet()\n",
-    "part_sheet = gc.open_by_key(col[\"parts\"]).worksheet()\n",
-    "part_sequences_sheet = gc.open_by_key(col[\"parts\"]).worksheet_by_title(\"Sequences\")\n",
-    "oligo_sheet = gc.open_by_key(col[\"oligos\"]).worksheet()"
+    "# strain_sheet = gc.open_by_key(col[\"strains\"]).worksheet()\n",
+    "# plasmid_sheet = gc.open_by_key(col[\"plasmids\"]).worksheet()\n",
+    "# part_sheet = gc.open_by_key(col[\"parts\"]).worksheet()\n",
+    "# part_sequences_sheet = gc.open_by_key(col[\"parts\"]).worksheet_by_title(\"Sequences\")\n",
+    "# oligo_sheet = gc.open_by_key(col[\"oligos\"]).worksheet()"
    ]
   },
   {
@@ -119,9 +110,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "drive_service = plasmid_sheet.client.drive.service\n",
-    "plasmid_folder = col[\"plasmid_maps\"]\n",
-    "plasmid_maps = api.google.list_drive(drive_service, root=plasmid_folder)"
+    "# drive_service = plasmid_sheet.client.drive.service\n",
+    "# plasmid_folder = col[\"plasmid_maps\"]\n",
+    "# plasmid_maps = api.google.list_drive(drive_service, root=plasmid_folder)"
    ]
   },
   {
@@ -186,158 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from paulssonlab.api.google import (\n",
-    "    get_drive_by_path,\n",
-    "    ensure_drive_folder,\n",
-    "    make_drive_folder,\n",
-    "    copy_drive_file,\n",
-    "    list_drive,\n",
-    "    clear_sheet,\n",
-    "    FOLDER_MIMETYPE,\n",
-    ")\n",
-    "from paulssonlab.cloning.workflow import rename_ids\n",
-    "\n",
-    "FOLDER_TYPES = [\"plasmid_maps\", \"sequencing\"]\n",
-    "COLLECTION_REGEX = r\"^(.*)_(strains|plasmids|oligos|parts|sequencing|plasmid_maps)$\"\n",
-    "ENABLE_AUTOMATION_FILENAME = \"ENABLE_AUTOMATION.txt\"\n",
-    "\n",
-    "\n",
-    "class Registry(object):\n",
-    "    def __init__(self, sheets_client, registry_folder):\n",
-    "        self.sheets_client = sheets_client\n",
-    "        self.registry_folder = registry_folder\n",
-    "        self.refresh()\n",
-    "\n",
-    "    def refresh(self):\n",
-    "        collection_folders = list_drive(\n",
-    "            self.sheets_client.drive.service, root=self.registry_folder, folder=True\n",
-    "        )\n",
-    "        registry = {}\n",
-    "        for collection_folder in collection_folders.values():\n",
-    "            new_registry = self.get_collection(collection_folder[\"id\"])\n",
-    "            duplicate_keys = registry.keys() & new_registry.keys()\n",
-    "            if len(duplicate_keys):\n",
-    "                raise ValueError(f\"found duplicate prefixes: {list(duplicate_keys)}\")\n",
-    "            registry = {**registry, **new_registry}\n",
-    "        self.registry = registry\n",
-    "\n",
-    "    def get_collection(self, collection_folder):\n",
-    "        files = list_drive(self.sheets_client.drive.service, root=collection_folder)\n",
-    "        if ENABLE_AUTOMATION_FILENAME not in files:\n",
-    "            return {}\n",
-    "        registry = {}\n",
-    "        for file in files.values():\n",
-    "            name = file[\"name\"]\n",
-    "            match = re.match(COLLECTION_REGEX, name)\n",
-    "            if match:\n",
-    "                prefix = match.group(1)\n",
-    "                type_ = match.group(2)\n",
-    "                ensure_drive_folder(file, type_ in FOLDER_TYPES)\n",
-    "                key = (prefix, type_)\n",
-    "                if key in registry:\n",
-    "                    raise ValueError(f\"found duplicate prefix: {key}\")\n",
-    "                registry[key] = file[\"id\"]\n",
-    "        return registry\n",
-    "\n",
-    "    def duplicate_collection(\n",
-    "        self,\n",
-    "        source_prefix,\n",
-    "        dest_prefix,\n",
-    "        source_folder_name=None,\n",
-    "        dest_folder_name=None,\n",
-    "        clear=True,\n",
-    "    ):\n",
-    "        # TODO: handle parts spreadsheet clearing (keep formulae)\n",
-    "        if source_folder_name is None:\n",
-    "            source_folder_name = f\"{source_prefix}_collection\"\n",
-    "        if dest_folder_name is None:\n",
-    "            dest_folder_name = f\"{dest_prefix}_collection\"\n",
-    "        drive_service = self.sheets_client.drive.service\n",
-    "        collections = list_drive(drive_service, root=self.registry_folder)\n",
-    "        if dest_folder_name in collections:\n",
-    "            raise ValueError(f\"collection '{dest_folder_name}' already exists\")\n",
-    "        if source_folder_name not in collections:\n",
-    "            raise ValueError(f\"collection '{source_folder_name}' not found\")\n",
-    "        source_folder = collections[source_folder_name].get(\"id\")\n",
-    "        source_files = list_drive(drive_service, root=source_folder, folder=True)\n",
-    "        dest_folder = make_drive_folder(\n",
-    "            drive_service, dest_folder_name, self.registry_folder\n",
-    "        )\n",
-    "        for source_file in source_files.values():\n",
-    "            if source_file[\"mimeType\"] == FOLDER_MIMETYPE:\n",
-    "                continue\n",
-    "            dest_file_name = None\n",
-    "            if source_file[\"name\"] == ENABLE_AUTOMATION_FILENAME:\n",
-    "                dest_file_name = ENABLE_AUTOMATION_FILENAME\n",
-    "            else:\n",
-    "                match = re.match(COLLECTION_REGEX, source_file[\"name\"])\n",
-    "                if match:\n",
-    "                    dest_type_prefix = re.sub(\n",
-    "                        f\"{re.escape(source_prefix)}$\", dest_prefix, match.group(1)\n",
-    "                    )\n",
-    "                    dest_file_name = f\"{dest_type_prefix}_{match.group(2)}\"\n",
-    "            if dest_file_name is not None:\n",
-    "                dest_body = {\"name\": dest_file_name, \"parents\": [dest_folder]}\n",
-    "                dest_file = (\n",
-    "                    drive_service.files()\n",
-    "                    .copy(fileId=source_file[\"id\"], body=dest_body)\n",
-    "                    .execute()\n",
-    "                )\n",
-    "                if match:\n",
-    "                    name_mapper = 0  # pass\n",
-    "                    if match.group(2) in (\"plasmids\", \"strains\"):\n",
-    "                        source_seq_folder_name = f\"{source_prefix}_sequencing\"\n",
-    "                        dest_seq_folder_name = f\"{dest_type_prefix}_sequencing\"\n",
-    "                        dest_seq_folder = make_drive_folder(\n",
-    "                            drive_service, dest_seq_folder_name, dest_folder\n",
-    "                        )\n",
-    "                        if source_seq_folder_name in source_files:\n",
-    "                            recursive_copy(\n",
-    "                                drive_service,\n",
-    "                                source_files[source_seq_folder_name],\n",
-    "                                dest_seq_folder,\n",
-    "                                transform_names=name_mapper,\n",
-    "                            )\n",
-    "                    if match.group(2) == \"plasmids\":\n",
-    "                        source_map_folder_name = f\"{source_prefix}_maps\"\n",
-    "                        dest_map_folder_name = f\"{dest_type_prefix}_maps\"\n",
-    "                        dest_map_folder = make_drive_folder(\n",
-    "                            drive_service, dest_map_folder_name, dest_folder\n",
-    "                        )\n",
-    "                        if source_map_folder_name in source_files:\n",
-    "                            recursive_copy(\n",
-    "                                drive_service,\n",
-    "                                source_files[source_map_folder_name],\n",
-    "                                dest_map_folder,\n",
-    "                                transform_names=name_mapper,\n",
-    "                            )\n",
-    "                    if clear:\n",
-    "                        # get first worksheet\n",
-    "                        dest_sheet = self.sheets_client.open_by_key(\n",
-    "                            dest_file[\"id\"]\n",
-    "                        ).worksheet()\n",
-    "                        clear_sheet(dest_sheet)\n",
-    "                    elif match.group(2) not in (\"parts\",):\n",
-    "                        # get first worksheet\n",
-    "                        dest_sheet = self.sheets_client.open_by_key(\n",
-    "                            dest_file[\"id\"]\n",
-    "                        ).worksheet()\n",
-    "                        rename_ids(dest_sheet, source_prefix, dest_type_prefix)\n",
-    "        return dest_folder\n",
-    "\n",
-    "    def get_loc(self, name):\n",
-    "        pass\n",
-    "        # pull number off, try to match to prefix (plasmid, strain, oligo)\n",
-    "        # get spreadsheet file, worksheet index\n",
-    "        # return worksheet, row\n",
-    "\n",
-    "    def get_sequence(self, name):\n",
-    "        # name = pLIB99, oLIB99, Part_Name\n",
-    "        # try plasmid, strain, part\n",
-    "        # return\n",
-    "        # (\"plasmid\", SeqRecord)\n",
-    "        # (\"part\", (\"5prime\", SeqRecord(\"AAA\"), \"3prime\"))\n",
-    "        pass"
+    "reg = registry.Registry(gc, config[\"registry\"][\"folder\"])"
    ]
   },
   {
@@ -346,8 +186,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def recursive_copy(service, source_folder, dest_folder, folders_only=False):\n",
-    "    pass"
+    "%%time\n",
+    "reg.duplicate_collection(\"LIB\", \"TESTB\", clear=False)"
    ]
   },
   {
@@ -356,7 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "registry = Registry(gc, config[\"registry\"][\"folder\"])"
+    "gc.drive.service.files().get(fileId=\"1b1V-A2HFPZDCf_EVgePD6sfkbQgMGsav\").execute()"
    ]
   },
   {
@@ -365,7 +205,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "registry.duplicate_collection(\"LIB\", \"TESTA\", clear=False)"
+    "source = \"11ex0eM5uBX4f740QsjBp-KmwJuCWx_xW\"\n",
+    "# dest = \"1f5iEiBZXv6_HLkbNzQEhOR6z1akOnwoa\"\n",
+    "# dest = \"13yIv53zSBZvTXI1rcREmjETSdw-QAUO8\"\n",
+    "dest = \"1k-RA4rUd2Ox1iePpdBGIQBklfdp97MSW\"\n",
+    "copy_drive_folder(\n",
+    "    gc.drive.service,\n",
+    "    source,\n",
+    "    dest,\n",
+    "    transform_names=lambda x, y: re.sub(r\"(\\w*)LIB(.*)\", r\"\\1TESTA\\2\", x),\n",
+    "    overwrite=False,\n",
+    "    recursive=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_drive(gc.drive.service, \"1gpbR9Njm73enshW_U4TN7xbwqgRN-tOo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = \"https://www.googleapis.com/drive/v3/files?q=%28%27%7B%27kind%27%3A+%27drive%23file%27%2C+%27id%27%3A+%271hHleYfqbqmwaEEAbLvp3BRbarEBfSgRA%27%2C+%27name%27%3A+%27pLIB_maps%27%2C+%27mimeType%27%3A+%27application%2Fvnd.google-apps.folder%27%7D%27+in+parents%29&pageSize=1000&alt=json\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import urllib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "urllib.parse.parse_qs(urllib.parse.urlparse(s).query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test transform_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_drive(gc.drive.service, source)"
    ]
   },
   {
