[cloning,shenker/cloning] WIP registry.get can get plasmid maps, but have not implemented sequence expressions.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/201205 3G.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/201205 3G.ipynb
@@ -128,39 +128,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%timeit\n",
-    "df = part_sheet.get_as_df().set_index(\"Name*\")\n",
-    "df.loc[\"YFP_CD\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%timeit\n",
-    "names = part_sheet.get_col(1)[1:]\n",
-    "idx = names.index(\"YFP_CD\")\n",
-    "part_sheet.get_row(idx + 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# oligo0_sheet = gc.open_by_key(col[\"oligos\"]).worksheet_by_title(\"Special (oLIB0.x)\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# if clear=False, RENAME ^oLIB -> oTESTA in first column\n",
     "# temp: get parts, plasmid seqs\n",
     "# check that GG works\n",
     "# gibson\n",
@@ -186,136 +153,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "reg.registry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "\"J23101\" in df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg.get(\"LIB93\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
     "reg.duplicate_collection(\"LIB\", \"TESTB\", clear=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gc.drive.service.files().get(fileId=\"1b1V-A2HFPZDCf_EVgePD6sfkbQgMGsav\").execute()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "source = \"11ex0eM5uBX4f740QsjBp-KmwJuCWx_xW\"\n",
-    "# dest = \"1f5iEiBZXv6_HLkbNzQEhOR6z1akOnwoa\"\n",
-    "# dest = \"13yIv53zSBZvTXI1rcREmjETSdw-QAUO8\"\n",
-    "dest = \"1k-RA4rUd2Ox1iePpdBGIQBklfdp97MSW\"\n",
-    "copy_drive_folder(\n",
-    "    gc.drive.service,\n",
-    "    source,\n",
-    "    dest,\n",
-    "    transform_names=lambda x, y: re.sub(r\"(\\w*)LIB(.*)\", r\"\\1TESTA\\2\", x),\n",
-    "    overwrite=False,\n",
-    "    recursive=False,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list_drive(gc.drive.service, \"1gpbR9Njm73enshW_U4TN7xbwqgRN-tOo\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = \"https://www.googleapis.com/drive/v3/files?q=%28%27%7B%27kind%27%3A+%27drive%23file%27%2C+%27id%27%3A+%271hHleYfqbqmwaEEAbLvp3BRbarEBfSgRA%27%2C+%27name%27%3A+%27pLIB_maps%27%2C+%27mimeType%27%3A+%27application%2Fvnd.google-apps.folder%27%7D%27+in+parents%29&pageSize=1000&alt=json\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import urllib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "urllib.parse.parse_qs(urllib.parse.urlparse(s).query)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test transform_names"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list_drive(gc.drive.service, source)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w = gc.open_by_key(\"1ZQubxSLcMyaIbcAbk286KwCIpmrKjMh6-_ApWxjSYYI\").worksheet()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "workflow.rename_ids(w, \"pLIB\", \"pTESTA\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "api.google.clear_sheet(w)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "registry.refresh()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "registry.registry"
    ]
   },
   {
