--- a/paulssonlab/src/paulssonlab/shenker/cloning/201206 OptoT7 parts.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/201206 OptoT7 parts.ipynb
@@ -48,7 +48,8 @@
     "import paulssonlab.cloning.sequence as sequence\n",
     "import paulssonlab.cloning.golden_gate as golden_gate\n",
     "import paulssonlab.cloning.codon as codon\n",
-    "import paulssonlab.cloning.optimization as optimization"
+    "import paulssonlab.cloning.optimization as optimization\n",
+    "import paulssonlab.cloning.registry as registry"
    ]
   },
   {
@@ -82,15 +83,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "session = benchlingapi.Session(config[\"benchling\"][\"api_key\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "gc = pygsheets.authorize(service_account_file=\"credentials.json\")"
    ]
   },
@@ -100,8 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "col = workflow.get_strain_collection_sheets(gc.drive.service, \"LIB\")\n",
-    "col"
+    "session = benchlingapi.Session(config[\"benchling\"][\"api_key\"])"
    ]
   },
   {
@@ -110,10 +101,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "strain_sheet = gc.open_by_key(col[\"strains\"]).worksheet()\n",
-    "plasmid_sheet = gc.open_by_key(col[\"plasmids\"]).worksheet()\n",
-    "part_sheet = gc.open_by_key(col[\"parts\"]).worksheet()\n",
-    "part_type_sheet = gc.open_by_key(col[\"parts\"]).worksheet_by_title(\"Part types\")"
+    "reg = registry.Registry(gc, config[\"registry\"][\"folder\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Gibson test"
    ]
   },
   {
@@ -122,9 +117,107 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "drive_service = plasmid_sheet.client.drive.service\n",
-    "plasmid_folder = col[\"plasmid_maps\"]\n",
-    "plasmid_maps = api.google.list_drive(drive_service, root=plasmid_folder)"
+    "seq1 = \"TTTT\"\n",
+    "seq1a = \"TTTTA\"\n",
+    "seq1b = \"TTTTC\"\n",
+    "seq1c = \"CCCCCCCCCCCTTTTC\"\n",
+    "seq2 = \"AAAATTTTAAAATTTTAAAA\"\n",
+    "seq3 = \"AGTGATTTTTTTCTCCATTCTTTGTGTGTTTTTTTTGTTTTATGAATTTTTTTAACTGATACCCGTTTTTTTGGAAGGAGACCCGTTTTTTTGGAAG\"\n",
+    "seq4 = \"TTTTTTAAAAAAAGGGGGGGGGGGGGGTTTTTTCCCCCCCCCCCCAAAAAAATTTTTTAAAAAAA\"\n",
+    "seq4p = \"GGGGGGGGGGGGGG\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_matching_chars(a, b):\n",
+    "    s = 0\n",
+    "    for i in range(min(len(a), len(b))):\n",
+    "        if a[i] == b[i]:\n",
+    "            s += 1\n",
+    "    return s\n",
+    "\n",
+    "\n",
+    "def count_contiguous_matching_chars(a, b, right=False):\n",
+    "    s = 0\n",
+    "    idxs = range(min(len(a), len(b)))\n",
+    "    if right:\n",
+    "        idxs = reversed(idxs)\n",
+    "    for i in idxs:\n",
+    "        if a[i] == b[i]:\n",
+    "            s += 1\n",
+    "        else:\n",
+    "            return s\n",
+    "    return s\n",
+    "\n",
+    "\n",
+    "def find_primer_binding_site(\n",
+    "    primer, template, linear=False, try_reverse_complement=True, min_score=4\n",
+    "):\n",
+    "    orig_template = template\n",
+    "    if try_reverse_complement:\n",
+    "        senses = (1, -1)\n",
+    "    else:\n",
+    "        senses = (1,)\n",
+    "    sites = []\n",
+    "    for sense in senses:\n",
+    "        if sense == -1:\n",
+    "            template = sequence.reverse_complement(orig_template)\n",
+    "        else:\n",
+    "            template = orig_template\n",
+    "        template_padded = \" \" * (len(primer) - 1) + template + \" \" * (len(primer) - 1)\n",
+    "        for site in range(1, len(template) + len(primer)):\n",
+    "            print(\" \" * (site) + primer)\n",
+    "            print(\" \" * len(primer) + template + \" \" * len(primer))\n",
+    "            score = count_contiguous_matching_chars(\n",
+    "                primer, template_padded[site - 1 : site + len(primer) - 1], right=True\n",
+    "            )\n",
+    "            if score >= min_score:\n",
+    "                print(template_padded[site - 1 : site + len(primer) - 1])\n",
+    "                print(\">>\", score)\n",
+    "                sites.append((sense, site, score))\n",
+    "    return sites\n",
+    "\n",
+    "\n",
+    "find_primer_binding_site(seq4p, seq4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import repeat\n",
+    "from paulssonlab.cloning.sequence import reverse_complement\n",
+    "\n",
+    "\n",
+    "def find_primer_binding_site(\n",
+    "    primer, template, linear=False, try_reverse_complement=True, min_length=8\n",
+    "):\n",
+    "    # TODO: .upper() or .lower() everything?\n",
+    "    if not linear:\n",
+    "        template = template + template[: len(primer)]\n",
+    "    aligner = Align.PairwiseAligner(\n",
+    "        mode=\"local\", match_score=1, mismatch_score=0, gap_score=-10\n",
+    "    )  # float(\"-inf\"))\n",
+    "    alignments = []\n",
+    "    alignments.extend(zip(aligner.align(primer, template), repeat(False)))\n",
+    "    if try_reverse_complement:\n",
+    "        primer_rc = reverse_complement(primer)\n",
+    "        alignments.extend(zip(aligner.align(primer_rc, template), repeat(True)))\n",
+    "    if not len(alignments):\n",
+    "        raise ValueError(\"could not align primer to template\")\n",
+    "    best_alignment = alignments\n",
+    "    # best_alignment = max(a for a in alignments if a.aligned[0][-1][1] == len(primer), key=lambda x: x[0].score)\n",
+    "    return best_alignment  # , fiveprime_strand\n",
+    "\n",
+    "\n",
+    "def pcr(primer1, primer2, template):\n",
+    "    pass"
    ]
   },
   {
@@ -183,279 +276,6 @@
    "metadata": {},
    "source": [
     "# Sequence orders"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"tGAGACCgGAGACG\" + \"TGCTAA\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sequence.reverse_complement(\"tGAGACCgGAGACG\" + \"TGCTAA\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import Bio.pairwise2 as pw"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pw.align.globalxs?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq1 = \"TTTT\"\n",
-    "seq1a = \"TTTTA\"\n",
-    "seq1b = \"TTTTC\"\n",
-    "seq1c = \"CCCCCCCCCCCTTTTC\"\n",
-    "seq2 = \"AAAATTTTAAAATTTTAAAA\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq2 = \"AGTGATTTTTTTCTCCATTCTTTGTGTGTTTTTTTTGTTTTATGAATTTTTTTAACTGATACCCGTTTTTTTGGAAGGAGACCCGTTTTTTTGGAAG\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pw.align.localxs(seq1b, seq2, -100, -100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from Bio import Align"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aligner = Align.PairwiseAligner(\n",
-    "    mode=\"local\", match_score=1, mismatch_score=0, gap_score=float(\"-inf\")\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aligner = Align.PairwiseAligner(\n",
-    "    mode=\"local\", match_score=1, mismatch_score=0, gap_score=float(\"-inf\")\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "alignments = aligner.align(seq1c, seq2)\n",
-    "for a in alignments:\n",
-    "    print(f\"score: {a.score}\")\n",
-    "    print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from itertools import repeat\n",
-    "from paulssonlab.cloning.sequence import reverse_complement\n",
-    "\n",
-    "\n",
-    "def find_primer_binding_site(\n",
-    "    primer, template, linear=False, try_reverse_complement=True, min_length=8\n",
-    "):\n",
-    "    # TODO: .upper() or .lower() everything?\n",
-    "    if not linear:\n",
-    "        template = template + template[: len(primer)]\n",
-    "    aligner = Align.PairwiseAligner(\n",
-    "        mode=\"local\", match_score=1, mismatch_score=0, gap_score=-10\n",
-    "    )  # float(\"-inf\"))\n",
-    "    alignments = []\n",
-    "    alignments.extend(zip(aligner.align(primer, template), repeat(False)))\n",
-    "    if try_reverse_complement:\n",
-    "        primer_rc = reverse_complement(primer)\n",
-    "        alignments.extend(zip(aligner.align(primer_rc, template), repeat(True)))\n",
-    "    if not len(alignments):\n",
-    "        raise ValueError(\"could not align primer to template\")\n",
-    "    best_alignment = alignments\n",
-    "    # best_alignment = max(a for a in alignments if a.aligned[0][-1][1] == len(primer), key=lambda x: x[0].score)\n",
-    "    return best_alignment  # , fiveprime_strand\n",
-    "\n",
-    "\n",
-    "def pcr(primer1, primer2, template):\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = find_primer_binding_site(\"ATTTTTTT\", seq.seq, try_reverse_complement=False)  # [0]\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(primer2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.aligned"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.aligned[0][-1][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.aligned?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = a[0][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b.target"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a[0][0].score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for alignment in aligner.align(primer2, seq.seq):\n",
-    "    print(\"Score = %.1f:\" % alignment.score)\n",
-    "    print(alignment)\n",
-    "    0 / 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Bio.Align.PairwiseAligner()"
    ]
   },
   {
