--- a/paulssonlab/src/paulssonlab/shenker/cloning/201206 OptoT7 parts.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/201206 OptoT7 parts.ipynb
@@ -154,8 +154,10 @@
     "    return s\n",
     "\n",
     "\n",
+    "# TODO: LINEAR!!\n",
+    "# TODO: add min_tm option?\n",
     "def find_primer_binding_site(\n",
-    "    primer, template, linear=False, try_reverse_complement=True, min_score=4\n",
+    "    primer, template, linear=False, try_reverse_complement=True, min_score=8\n",
     "):\n",
     "    orig_template = template\n",
     "    if try_reverse_complement:\n",
@@ -169,16 +171,12 @@
     "        else:\n",
     "            template = orig_template\n",
     "        template_padded = \" \" * (len(primer) - 1) + template + \" \" * (len(primer) - 1)\n",
-    "        for site in range(1, len(template) + len(primer)):\n",
-    "            print(\" \" * (site) + primer)\n",
-    "            print(\" \" * len(primer) + template + \" \" * len(primer))\n",
+    "        for loc in range(1, len(template) + len(primer)):\n",
     "            score = count_contiguous_matching_chars(\n",
-    "                primer, template_padded[site - 1 : site + len(primer) - 1], right=True\n",
+    "                primer, template_padded[loc - 1 : loc + len(primer) - 1], right=True\n",
     "            )\n",
     "            if score >= min_score:\n",
-    "                print(template_padded[site - 1 : site + len(primer) - 1])\n",
-    "                print(\">>\", score)\n",
-    "                sites.append((sense, site, score))\n",
+    "                sites.append((sense, loc, score))\n",
     "    return sites\n",
     "\n",
     "\n",
@@ -191,33 +189,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from itertools import repeat\n",
-    "from paulssonlab.cloning.sequence import reverse_complement\n",
+    "sequence.slice_seq?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: make work with SeqRecords\n",
+    "def simulate_pcr(primer1, primer2, template, linear=False, min_score=6):\n",
+    "    both_sites = []\n",
+    "    for primer in (primer1, primer2):\n",
+    "        sites = find_primer_binding_site(\n",
+    "            primer,\n",
+    "            template,\n",
+    "            linear=linear,\n",
+    "            try_reverse_complement=True,\n",
+    "            min_score=min_score,\n",
+    "        )\n",
+    "        if len(sites) != 1:\n",
+    "            raise ValueError(\n",
+    "                f\"expecting a unique primer binding site, instead found {len(sites)}\"\n",
+    "            )\n",
+    "        both_sites.append(sites[0])\n",
+    "    if both_sites[0][0] == -1:\n",
+    "        both_sites = both_sites[::-1]\n",
+    "    sense1, loc1, len1 = both_sites[0]\n",
+    "    sense2, loc2, len2 = both_sites[1]\n",
+    "    if sense1 != -sense2:\n",
+    "        raise ValueError(\"expecting a forward/reverse primer pair\")\n",
+    "    start = loc1\n",
+    "    stop = len(template) - loc2\n",
+    "    amplicon = sequence.slice_seq(template, start, stop)\n",
+    "    product = primer1 + amplicon + primer2\n",
+    "    return product\n",
     "\n",
     "\n",
-    "def find_primer_binding_site(\n",
-    "    primer, template, linear=False, try_reverse_complement=True, min_length=8\n",
-    "):\n",
-    "    # TODO: .upper() or .lower() everything?\n",
-    "    if not linear:\n",
-    "        template = template + template[: len(primer)]\n",
-    "    aligner = Align.PairwiseAligner(\n",
-    "        mode=\"local\", match_score=1, mismatch_score=0, gap_score=-10\n",
-    "    )  # float(\"-inf\"))\n",
-    "    alignments = []\n",
-    "    alignments.extend(zip(aligner.align(primer, template), repeat(False)))\n",
-    "    if try_reverse_complement:\n",
-    "        primer_rc = reverse_complement(primer)\n",
-    "        alignments.extend(zip(aligner.align(primer_rc, template), repeat(True)))\n",
-    "    if not len(alignments):\n",
-    "        raise ValueError(\"could not align primer to template\")\n",
-    "    best_alignment = alignments\n",
-    "    # best_alignment = max(a for a in alignments if a.aligned[0][-1][1] == len(primer), key=lambda x: x[0].score)\n",
-    "    return best_alignment  # , fiveprime_strand\n",
-    "\n",
-    "\n",
-    "def pcr(primer1, primer2, template):\n",
-    "    pass"
+    "p1 = \"TTTTTAGAAGA\"\n",
+    "p2 = \"CCCCCAGAGGG\"\n",
+    "seq5 = \"AGAAGACCCCGGGGCCCTCT\"\n",
+    "simulate_pcr(p1, p2, seq5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequence.reverse_complement(seq5)"
    ]
   },
   {
@@ -260,15 +282,6 @@
    "source": [
     "primer1 = \"ATGAACACGATTAACATCGCTAAGAACGACT\"\n",
     "primer2 = \"aaaaaaaa\" + primer1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import biopython."
    ]
   },
   {
