[shenker/snakenbake] Forgot to commit months ago. Final version of the September Basilisk wafer.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -162,8 +162,8 @@
     "    port_margin=1e3,  # 0.6\n",
     "    port_radius=750 / 2,\n",
     "    # port_radius=0,\n",
-    "    port=True,\n",
-    "    draw_trenches=False,\n",
+    "    port=False,\n",
+    "    draw_trenches=True,\n",
     "    metadata=metadata,\n",
     ")\n",
     "manifold_params = dissoc(\n",
@@ -180,8 +180,8 @@
     "            manifold_bend_radius=300,\n",
     "            manifold_margin=100,\n",
     "            feeding_channel_width=40,\n",
+    "            # port_wayfinder_orientations=(\"right\", \"top\")#(\"right\", \"top\", \"bottom\"),\n",
     "            #             port_margin=0.5e3,\n",
-    "            port=True\n",
     "            # trench_spacing=2.1,\n",
     "        ),\n",
     "    },\n",
@@ -216,7 +216,7 @@
     "        **base_params,\n",
     "    ),\n",
     "    dict(\n",
-    "        port_wayfinder_orientations=(\"left\", \"bottom\"),\n",
+    "        # port_wayfinder_orientations=(\"left\", \"bottom\"),\n",
     "        lanes_per_snake=3,\n",
     "        trench_spacing=2.1,\n",
     "        registration_marks=True,\n",
@@ -227,7 +227,7 @@
     "        **manifold_params,\n",
     "    ),\n",
     "    dict(\n",
-    "        port_wayfinder_orientations=(\"left\", \"bottom\"),\n",
+    "        # port_wayfinder_orientations=(\"left\", \"bottom\"),\n",
     "        lanes_per_snake=3,\n",
     "        trench_spacing=2.1,\n",
     "        manifold_input_style=\"u-turn\",\n",
@@ -235,7 +235,7 @@
     "        **manifold_params,\n",
     "    ),\n",
     "    dict(\n",
-    "        port_wayfinder_orientations=(\"left\", \"bottom\"),\n",
+    "        # port_wayfinder_orientations=(\"left\", \"bottom\"),\n",
     "        lanes_per_snake=5,\n",
     "        trench_spacing=2.1,\n",
     "        registration_marks=True,\n",
