[shenker/snakenbake] draw_grid_overlay works with multiple offsets, get_grid_metadata returns either one or two offsets (sufficient to handle snake chips with regular lane spacing), get_fov_coverage can start on even or odd trench set (draw_grid_overlay currently ignores skip_first).

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import gdspy\n",
     "import matplotlib.pyplot as plt\n",
     "from cytoolz import dissoc\n",
@@ -46,33 +47,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_fovs(fov_dims, metadata):\n",
-    "    for fov_name, fov_dim in fov_dims.items():\n",
-    "        fovs, unit_cell_height, active_height = fov.fovs_per_chip(fov_dim, **metadata)\n",
-    "        print(f\"{fov_name}: {fov_dim[0]} x {fov_dim[1]}\")\n",
-    "        # print(metadata)\n",
-    "        print(\"    FOVs: {} ({} x {})\".format(np.product(fovs), fovs[0], fovs[1]))\n",
-    "        print(\"    unit cell height:\", unit_cell_height)\n",
-    "        print(\n",
-    "            \"    active height: {} (margin: {})\".format(\n",
-    "                active_height, fov_dim[1] - active_height\n",
-    "            )\n",
-    "        )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "camera_dims = {\n",
     "    \"iris\": (4.25, np.array([5056, 2960])),\n",
     "    \"bsi\": (6.5, np.array([2048, 2048])),\n",
     "}\n",
+    "# mags = (20, 40, 60, 100)\n",
+    "# mags = (20,40)\n",
+    "mags = (40,)\n",
     "fov_dims = {}\n",
     "for camera, (pixel_size, fov_dim) in camera_dims.items():\n",
-    "    for mag in (20, 40, 60, 100):\n",
+    "    for mag in mags:\n",
     "        fov_dims[f\"{camera} {mag}x\"] = fov_dim * pixel_size / mag"
    ]
   },
@@ -146,6 +130,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
+    "tg = 130\n",
     "metadata = {}\n",
     "base_params = dict(\n",
     "    design_func=s.snake,\n",
@@ -153,9 +138,9 @@
     "    split=8,\n",
     "    gap_lanes=0,\n",
     "    trench_length=35,\n",
-    "    # feeding_channel_width=40,\n",
+    "    feeding_channel_width=80,\n",
     "    #     horizontal_margin=2e3,\n",
-    "    trench_gap=20,\n",
+    "    trench_gap=tg,  # 20,\n",
     "    trench_width=1.4,\n",
     "    # trench_spacing=2.1,\n",
     "    border_margin=0.5e3,\n",
@@ -163,6 +148,10 @@
     "    port_radius=750 / 2,\n",
     "    # port_radius=0,\n",
     "    port=False,\n",
+    "    #     registration_marks=True,\n",
+    "    #     chip_id=0,\n",
+    "    #     mark_size=2,\n",
+    "    #     mark_spacing=1.5,\n",
     "    draw_trenches=True,\n",
     "    metadata=metadata,\n",
     ")\n",
@@ -171,6 +160,7 @@
     "        **base_params,\n",
     "        **dict(\n",
     "            design_func=s.manifold_snake,\n",
+    "            manifold_input_style=\"bend-in\",\n",
     "            dims=chip_dims,\n",
     "            split=None,\n",
     "            num_manifolds=1,\n",
@@ -179,7 +169,7 @@
     "            manifold_bend_margin=0.2e3,\n",
     "            manifold_bend_radius=300,\n",
     "            manifold_margin=100,\n",
-    "            feeding_channel_width=40,\n",
+    "            # feeding_channel_width=40,\n",
     "            # port_wayfinder_orientations=(\"right\", \"top\")#(\"right\", \"top\", \"bottom\"),\n",
     "            #             port_margin=0.5e3,\n",
     "            # trench_spacing=2.1,\n",
@@ -190,84 +180,86 @@
     ")\n",
     "params = [\n",
     "    dict(\n",
-    "        feeding_channel_width=80,\n",
-    "        trench_spacing=1.1,\n",
-    "        registration_marks=True,\n",
-    "        chip_id=0,\n",
-    "        mark_size=2,\n",
-    "        mark_spacing=1.5,\n",
-    "        tick_period=50,\n",
-    "        **base_params,\n",
-    "    ),\n",
-    "    dict(\n",
-    "        feeding_channel_width=80,\n",
-    "        trench_spacing=2.1,\n",
-    "        registration_marks=True,\n",
-    "        chip_id=1,\n",
-    "        mark_size=1,\n",
-    "        mark_spacing=1,\n",
-    "        tick_period=50,\n",
-    "        **base_params,\n",
-    "    ),\n",
-    "    dict(\n",
-    "        feeding_channel_width=80,\n",
-    "        trench_spacing=3.1,\n",
-    "        registration_marks=False,\n",
-    "        **base_params,\n",
-    "    ),\n",
-    "    dict(\n",
-    "        # port_wayfinder_orientations=(\"left\", \"bottom\"),\n",
     "        lanes_per_snake=3,\n",
+    "        feeding_channel_width=40,\n",
     "        trench_spacing=2.1,\n",
-    "        registration_marks=True,\n",
-    "        manifold_input_style=\"bend-in\",\n",
-    "        chip_id=2,\n",
-    "        mark_size=1,\n",
-    "        mark_spacing=1,\n",
-    "        **manifold_params,\n",
     "    ),\n",
     "    dict(\n",
-    "        # port_wayfinder_orientations=(\"left\", \"bottom\"),\n",
     "        lanes_per_snake=3,\n",
+    "        feeding_channel_width=50,\n",
     "        trench_spacing=2.1,\n",
-    "        manifold_input_style=\"u-turn\",\n",
-    "        registration_marks=False,\n",
-    "        **manifold_params,\n",
     "    ),\n",
     "    dict(\n",
-    "        # port_wayfinder_orientations=(\"left\", \"bottom\"),\n",
+    "        lanes_per_snake=3,\n",
+    "        feeding_channel_width=60,\n",
+    "        trench_spacing=2.1,\n",
+    "    ),\n",
+    "    dict(\n",
+    "        lanes_per_snake=3,\n",
+    "        feeding_channel_width=70,\n",
+    "        trench_spacing=2.1,\n",
+    "    ),\n",
+    "    dict(\n",
     "        lanes_per_snake=5,\n",
+    "        feeding_channel_width=80,\n",
     "        trench_spacing=2.1,\n",
-    "        registration_marks=True,\n",
-    "        manifold_input_style=\"bend-in\",\n",
-    "        chip_id=3,\n",
-    "        mark_size=1,\n",
-    "        mark_spacing=1,\n",
-    "        **manifold_params,\n",
+    "    ),\n",
+    "    dict(\n",
+    "        lanes_per_snake=5,\n",
+    "        feeding_channel_width=90,\n",
+    "        trench_spacing=2.1,\n",
     "    ),\n",
     "]\n",
+    "params = [{**manifold_params, **p} for p in params]\n",
+    "# chip names\n",
     "chip_names = [\n",
     "    \"Basilisk {ports} FC{feeding_channel_width} L{trench_length} W{trench_width} TS{trench_spacing}{reg}\".format(\n",
     "        ports=f\"S{p['split']}\"\n",
     "        if np.isscalar(p[\"split\"])\n",
     "        else \"S{} LS{}\".format(p[\"num_manifolds\"], p[\"lanes_per_snake\"]),\n",
-    "        reg=f\" M{p['mark_size']} ID{p['chip_id']}\" if p[\"registration_marks\"] else \"\",\n",
+    "        reg=f\" M{p.get('mark_size')} ID{p.get('chip_id')}\"\n",
+    "        if p.get(\"registration_marks\")\n",
+    "        else \"\",\n",
     "        **p,\n",
     "    )\n",
     "    for p in params\n",
     "]\n",
+    "# make chip cells\n",
     "chips = [s.chip(name, **p) for p, name in zip(params, chip_names)]\n",
+    "# calculate FOV info and overlay FOVs on chip cells\n",
+    "grid_metadata = {}\n",
+    "for chip_name, chip in zip(chip_names, chips):\n",
+    "    chip_grid_metadata = fov.get_grid_metadata(fov_dims, metadata[chip_name])\n",
+    "    grid_metadata[chip_name] = chip_grid_metadata\n",
+    "    fov.draw_grid_overlay(chip, metadata[chip_name], fov_dims, chip_grid_metadata)\n",
+    "grid_df = pd.concat(\n",
+    "    {\n",
+    "        k: pd.DataFrame(v.values()).set_index(\"fov_name\")\n",
+    "        for k, v in grid_metadata.items()\n",
+    "    },\n",
+    "    names=[\"chip\"],\n",
+    ")\n",
+    "# lay out wafer, output design\n",
     "wafer_manifest = \"\\n\".join([f\"{idx+1}) \" + name for idx, name in enumerate(chip_names)])\n",
     "main_cell = s.wafer(\n",
     "    chips,\n",
-    "    text_right=\"Basilisk \\n JQS/DE/YG 200902\",\n",
+    "    text_right=\"Basilisk\\n JQS/DE/YG 201213\",\n",
     "    text_left=wafer_manifest,\n",
     "    text=True,\n",
     "    mask=False,\n",
     "    chip_dims=chip_dims,\n",
     "    diameter=(4 * u.inch).to(u.um).magnitude,\n",
     ")\n",
-    "s.write_gds(main_cell, \"designs/200902basilisk.gds\")"
+    "s.write_gds(main_cell, \"designs/201213basilisk.gds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_df.loc[pd.IndexSlice[:, [\"iris 40x\", \"bsi 40x\"]], :].round(2)"
    ]
   },
   {
@@ -294,6 +286,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "{k: v[\"num_lanes\"] for k, v in metadata.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Q_per_snake = 20 * u.uL / u.min\n",
     "height = 75 * u.um\n",
     "mu = 0.7 * u.cP  # dynamic viscosity\n",
@@ -307,15 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(\n",
-    "    Q_per_snake\n",
-    "    * mu\n",
-    "    * fluid.snake_resistance(\n",
-    "        80 * u.um,\n",
-    "        {\"snake_length\": [17920 * 19], \"feeding_channel_width\": 90},\n",
-    "        length_unit=u.um,\n",
-    "    )\n",
-    ").to(u.bar)"
+    "grid_df.loc[pd.IndexSlice[:, [\"iris 40x\", \"bsi 40x\"]], :].round(2)"
    ]
   },
   {
@@ -324,48 +317,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(\n",
-    "    Q_per_snake\n",
-    "    * mu\n",
-    "    * fluid.snake_resistance(\n",
-    "        80 * u.um,\n",
-    "        {\"snake_length\": [17920 * 25], \"feeding_channel_width\": 45},\n",
-    "        length_unit=u.um,\n",
-    "    )\n",
-    ").to(u.bar)"
+    "grid_df.round(2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print_fovs(fov_dims, metadata[\"Basilisk S8 FC80 L35 W1.4 TS2.1 M1 ID1\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print_fovs(fov_dims, metadata[\"Basilisk S1 LS3 FC40 L35 W1.4 TS2.1 M1 ID2\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -384,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
