[shenker/snakenbake] Fixed critical bug in get_grid_metadata: a wildly incorrect grid_height was calculated if trench_sets_per_fov depended on skip_first. Now we limit the second get_fov_coverage call to return after it iterates through trench_sets_per_fov, even if it could fit another trench set. Note that we do not automatically select an optimal value of skip_first, this should probably be added.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -130,7 +130,6 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "tg = 130\n",
     "metadata = {}\n",
     "base_params = dict(\n",
     "    design_func=s.snake,\n",
@@ -140,7 +139,7 @@
     "    trench_length=35,\n",
     "    feeding_channel_width=80,\n",
     "    #     horizontal_margin=2e3,\n",
-    "    trench_gap=tg,  # 20,\n",
+    "    trench_gap=20,\n",
     "    trench_width=1.4,\n",
     "    # trench_spacing=2.1,\n",
     "    border_margin=0.5e3,\n",
@@ -231,7 +230,14 @@
     "for chip_name, chip in zip(chip_names, chips):\n",
     "    chip_grid_metadata = fov.get_grid_metadata(fov_dims, metadata[chip_name])\n",
     "    grid_metadata[chip_name] = chip_grid_metadata\n",
-    "    fov.draw_grid_overlay(chip, metadata[chip_name], fov_dims, chip_grid_metadata)\n",
+    "    fov.draw_grid_overlay(\n",
+    "        chip,\n",
+    "        metadata[chip_name],\n",
+    "        fov_dims,\n",
+    "        chip_grid_metadata,\n",
+    "        center_margins=False,\n",
+    "        rotate=False,\n",
+    "    )\n",
     "grid_df = pd.concat(\n",
     "    {\n",
     "        k: pd.DataFrame(v.values()).set_index(\"fov_name\")\n",
@@ -243,14 +249,27 @@
     "wafer_manifest = \"\\n\".join([f\"{idx+1}) \" + name for idx, name in enumerate(chip_names)])\n",
     "main_cell = s.wafer(\n",
     "    chips,\n",
-    "    text_right=\"Basilisk\\n JQS/DE/YG 201213\",\n",
+    "    text_right=\"Basilisk\\n JQS/DE/YG 201214\",\n",
     "    text_left=wafer_manifest,\n",
     "    text=True,\n",
     "    mask=False,\n",
     "    chip_dims=chip_dims,\n",
     "    diameter=(4 * u.inch).to(u.um).magnitude,\n",
     ")\n",
-    "s.write_gds(main_cell, \"designs/201213basilisk.gds\")"
+    "s.write_gds(main_cell, \"designs/201214basilisk.gds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fov.get_fov_coverage(\n",
+    "    fov_dims[\"iris 40x\"],\n",
+    "    **metadata[\"Basilisk S1 LS5 FC80 L35 W1.4 TS2.1\"],\n",
+    "    skip_first=True,\n",
+    ")"
    ]
   },
   {
