[shenker/snakenbake] WIP. Renamed active_height to filled_height, started refactoring to allow multiple filled heights (like offsets).

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -268,7 +268,7 @@
     "fov.get_fov_coverage(\n",
     "    fov_dims[\"iris 40x\"],\n",
     "    **metadata[\"Basilisk S1 LS5 FC80 L35 W1.4 TS2.1\"],\n",
-    "    skip_first=True,\n",
+    "    skip_first=False,\n",
     ")"
    ]
   },
