[shenker/snakenbake] As used to produce the 201214 Basilisk wafer design.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -179,40 +179,51 @@
     ")\n",
     "params = [\n",
     "    dict(\n",
+    "        manifold_input_style=\"u-turn\",\n",
+    "        feeding_channel_width=30,\n",
+    "        trench_length=20,\n",
+    "        trench_gap=20,\n",
     "        lanes_per_snake=3,\n",
+    "        trench_spacing=2.1,\n",
+    "    ),\n",
+    "    dict(\n",
+    "        manifold_input_style=\"u-turn\",\n",
     "        feeding_channel_width=40,\n",
-    "        trench_spacing=2.1,\n",
-    "    ),\n",
-    "    dict(\n",
+    "        trench_length=25,\n",
+    "        trench_gap=15,\n",
     "        lanes_per_snake=3,\n",
-    "        feeding_channel_width=50,\n",
     "        trench_spacing=2.1,\n",
     "    ),\n",
     "    dict(\n",
+    "        feeding_channel_width=40,\n",
+    "        trench_gap=20,\n",
     "        lanes_per_snake=3,\n",
-    "        feeding_channel_width=60,\n",
     "        trench_spacing=2.1,\n",
     "    ),\n",
     "    dict(\n",
-    "        lanes_per_snake=3,\n",
-    "        feeding_channel_width=70,\n",
-    "        trench_spacing=2.1,\n",
-    "    ),\n",
-    "    dict(\n",
+    "        feeding_channel_width=65,\n",
+    "        trench_gap=30,\n",
+    "        # trench_length=35,\n",
     "        lanes_per_snake=5,\n",
-    "        feeding_channel_width=80,\n",
     "        trench_spacing=2.1,\n",
     "    ),\n",
     "    dict(\n",
-    "        lanes_per_snake=5,\n",
     "        feeding_channel_width=90,\n",
+    "        trench_gap=30,\n",
+    "        lanes_per_snake=5,\n",
     "        trench_spacing=2.1,\n",
+    "    ),\n",
+    "    dict(\n",
+    "        feeding_channel_width=90,\n",
+    "        trench_gap=30,\n",
+    "        lanes_per_snake=5,\n",
+    "        trench_spacing=5.1,\n",
     "    ),\n",
     "]\n",
     "params = [{**manifold_params, **p} for p in params]\n",
     "# chip names\n",
     "chip_names = [\n",
-    "    \"Basilisk {ports} FC{feeding_channel_width} L{trench_length} W{trench_width} TS{trench_spacing}{reg}\".format(\n",
+    "    \"Basilisk {ports} FC{feeding_channel_width} L{trench_length} W{trench_width} TS{trench_spacing}{reg} TG{trench_gap}\".format(\n",
     "        ports=f\"S{p['split']}\"\n",
     "        if np.isscalar(p[\"split\"])\n",
     "        else \"S{} LS{}\".format(p[\"num_manifolds\"], p[\"lanes_per_snake\"]),\n",
@@ -235,7 +246,7 @@
     "        metadata[chip_name],\n",
     "        fov_dims,\n",
     "        chip_grid_metadata,\n",
-    "        center_margins=False,\n",
+    "        center_margins=True,\n",
     "        rotate=False,\n",
     "    )\n",
     "grid_df = pd.concat(\n",
@@ -257,19 +268,6 @@
     "    diameter=(4 * u.inch).to(u.um).magnitude,\n",
     ")\n",
     "s.write_gds(main_cell, \"designs/201214basilisk.gds\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fov.get_fov_coverage(\n",
-    "    fov_dims[\"iris 40x\"],\n",
-    "    **metadata[\"Basilisk S1 LS5 FC80 L35 W1.4 TS2.1\"],\n",
-    "    skip_first=False,\n",
-    ")"
    ]
   },
   {
