--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -52,8 +52,8 @@
     "    \"bsi\": (6.5, np.array([2048, 2048])),\n",
     "}\n",
     "# mags = (20, 40, 60, 100)\n",
-    "# mags = (20,40)\n",
-    "mags = (40,)\n",
+    "mags = (20, 40)\n",
+    "# mags = (40,)\n",
     "fov_dims = {}\n",
     "for camera, (pixel_size, fov_dim) in camera_dims.items():\n",
     "    for mag in mags:\n",
@@ -101,7 +101,7 @@
    "outputs": [],
    "source": [
     "coverslip_dims = np.array([55e3, 24e3])\n",
-    "chip_dims = np.array([34e3, 18e3])\n",
+    "chip_dims = np.array([33e3, 18e3])\n",
     "chip_dims0 = np.array([23e3, 13e3])\n",
     "chip_dims1 = np.array([40e3, 22e3])"
    ]
@@ -116,7 +116,7 @@
     "ax = plt.gca()\n",
     "ax.add_patch(plt.Rectangle(-coverslip_dims / 2, *coverslip_dims, fill=False))\n",
     "ax.add_patch(plt.Rectangle(-chip_dims0 / 2, *chip_dims0, fill=False, ls=\"-.\"))\n",
-    "ax.add_patch(plt.Rectangle(-chip_dims1 / 2, *chip_dims1, fill=False, ls=\"--\"))\n",
+    "# ax.add_patch(plt.Rectangle(-chip_dims1 / 2, *chip_dims1, fill=False, ls=\"--\"))\n",
     "ax.add_patch(plt.Rectangle(-chip_dims / 2, *chip_dims, fill=False))\n",
     "ax.set_xlim(-1.2 * coverslip_dims[0] / 2, 1.2 * coverslip_dims[0] / 2)\n",
     "ax.set_ylim(-1.2 * coverslip_dims[1] / 2, 1.2 * coverslip_dims[1] / 2)\n",
@@ -186,14 +186,14 @@
     "        lanes_per_snake=3,\n",
     "        trench_spacing=2.1,\n",
     "    ),\n",
-    "    dict(\n",
-    "        manifold_input_style=\"u-turn\",\n",
-    "        feeding_channel_width=40,\n",
-    "        trench_length=25,\n",
-    "        trench_gap=15,\n",
-    "        lanes_per_snake=3,\n",
-    "        trench_spacing=2.1,\n",
-    "    ),\n",
+    "    #     dict(\n",
+    "    #         manifold_input_style=\"u-turn\",\n",
+    "    #         feeding_channel_width=40,\n",
+    "    #         trench_length=25,\n",
+    "    #         trench_gap=15,\n",
+    "    #         lanes_per_snake=3,\n",
+    "    #         trench_spacing=2.1,\n",
+    "    #     ),\n",
     "    dict(\n",
     "        feeding_channel_width=40,\n",
     "        trench_gap=20,\n",
@@ -204,6 +204,12 @@
     "        feeding_channel_width=65,\n",
     "        trench_gap=30,\n",
     "        # trench_length=35,\n",
+    "        lanes_per_snake=5,\n",
+    "        trench_spacing=2.1,\n",
+    "    ),\n",
+    "    dict(\n",
+    "        feeding_channel_width=90,\n",
+    "        trench_gap=30,\n",
     "        lanes_per_snake=5,\n",
     "        trench_spacing=2.1,\n",
     "    ),\n",
@@ -260,23 +266,15 @@
     "wafer_manifest = \"\\n\".join([f\"{idx+1}) \" + name for idx, name in enumerate(chip_names)])\n",
     "main_cell = s.wafer(\n",
     "    chips,\n",
-    "    text_right=\"Basilisk\\n JQS/DE/YG 201214\",\n",
+    "    text_right=\"Basilisk\\n JQS/DE/YG 201214.3\",\n",
     "    text_left=wafer_manifest,\n",
     "    text=True,\n",
     "    mask=False,\n",
     "    chip_dims=chip_dims,\n",
     "    diameter=(4 * u.inch).to(u.um).magnitude,\n",
+    "    alignment_mark_position=40e3,\n",
     ")\n",
-    "s.write_gds(main_cell, \"designs/201214basilisk.gds\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grid_df.loc[pd.IndexSlice[:, [\"iris 40x\", \"bsi 40x\"]], :].round(2)"
+    "s.write_gds(main_cell, \"designs/201214.3basilisk.gds\")"
    ]
   },
   {
@@ -334,7 +332,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid_df.round(2)"
+    "grid_df.loc[pd.IndexSlice[:, [\"iris 20x\", \"bsi 20x\"]], :].round(2)"
    ]
   }
  ],
